--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
 
     <script>
         $(function() {
-            var socket = new WebSocket("wss://" + window.location.host + "/ws?username=" + encodeURIComponent($('#username').val()));
+            var socket = new WebSocket("wss://websoket-haris.herokuapp.com/ws?username=" + encodeURIComponent($('#username').val()));
 
             socket.onmessage = function(event) {
                 var message = JSON.parse(event.data);
