--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <title>WebSocket Chat</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -22,14 +22,14 @@
         }
     </style>
 </head>
-<body>
-    <div class="container">
-        <h1>WebSocket Chat</h1>
-        <div class="input-group mb-3">
-            <input type="text" id="username" class="form-control" placeholder="Username">
-            <input type="text" id="message" class="form-control" placeholder="Message">
+<body class="bg-gray-100">
+    <div class="container mx-auto py-8">
+        <h1 class="text-3xl font-bold mb-4">WebSocket Chat</h1>
+        <div class="flex mb-4">
+            <input type="text" id="username" class="w-1/4 mr-2 p-2 border border-gray-300 rounded" placeholder="Username">
+            <input type="text" id="message" class="flex-1 mr-2 p-2 border border-gray-300 rounded" placeholder="Message">
             <div class="input-group-append">
-                <button id="send" class="btn btn-primary">Send</button>
+                <button id="send" class="py-2 px-4 bg-blue-500 text-white rounded hover:bg-blue-600">Send</button>
             </div>
         </div>
         <div id="messages" class="border p-3 mb-3"></div>
